<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CallAssistant</string>
    <string name="action_settings">Settings</string>
    <string name="action_delete">Delete</string>
    <string name="hello_world">Hello world!</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>

    <string name="recording">Recording &#8230;</string>
    <string name="automatic_record">Automatic Record</string>
    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="show_notification">Show Notification</string>
    <string name="show">Show</string>
    <string name="hide">Hide</string>
    <string name="filename">FileName</string>
    <string name="confirm_message">Confirm Delete ?</string>
    <string name="customer_number">Phone :</string>
    <string name="customer_name">Name :</string>
    <string name="customer_state">State :</string>
    <string name="call_log">Calllog</string>
    <string name="call_log_count">call logs</string>
    <string name="save_success">Saved Successfully</string>
    <string name="save_failure">Saved failure</string>
    <string name="show_list">List</string>
    <string name="detail">Detail</string>
    <string name="flip_mute">FlipMute</string>
    <string name="block_all_call">Block all calls</string>
    <string name="warning_tone">Block call ringtone</string>
    <string name="record_content">Record content</string>
    <string name="black_name">BlackName</string>
    <string name="add_black_name">AddBlackName</string>
    <string name="block_times_args">Block %1$d times</string>
    <string name="empty_call_log">CallLog empty</string>
    <string name="empty_black_name">Black empty</string>
    <string name="hour_tag">h</string>
    <string name="min_tag">m</string>
    <string name="sec_tag">s</string>
    <string name="input_number">InputNumber</string>
    <string name="check_log">Check Log</string>
    <string name="check_upgrade">Check Upgrade</string>
    <string name="no_newversion_tip">Your version is lastest !</string>
    <string name="new_version_tiptitle">New Version</string>
    <string name="new_version_tipcontent">New Version ,upgrade ?</string>
    <string name="btn_download">Download</string>
    <string name="loading">Loading...</string>
    <string name="version">Version : </string>
</resources> 
