<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <CheckBoxPreference
        android:key="key_automatic_record"
        android:persistent="true"
        android:defaultValue="true"
        android:summaryOff="@string/off"
        android:summaryOn="@string/on"
        android:title="@string/automatic_record" />
    <ListPreference
        android:key="key_warning_tone"
        android:title="@string/warning_tone"
        android:entries="@array/warnig_tone_show"
        android:entryValues="@array/warning_tone_value"
        android:defaultValue="busy"/>
    <CheckBoxPreference
        android:key="key_flip_mute"
        android:persistent="true"
        android:defaultValue="true"
        android:summaryOff="@string/off"
        android:summaryOn="@string/on"
        android:title="@string/flip_mute" />
</PreferenceScreen>